--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Fondamento&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a20cba948b.js" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
     <header class="flex vertical center">
-        <div class="logo-top flex center">
+        <div class="logo-top flex space-between">
+            <i class="fas fa-bars fa-2x hidden-icon"></i>
             <h1>titania</h1>
+            <i class="fas fa-bars fa-2x menu-icon-mobile" onclick="openMenu()"></i>
         </div>
         <div class="menu center flex space-around border-bottom">
             <i class="hidden-icon fab fa-instagram-square fa-2x"></i>
