--- a/index.html
+++ b/index.html
@@ -13,18 +13,43 @@
     <script src="./script.js"></script>
 </head>
 <body>
+    <div class="mobile-menu" id="mobile-menu">
+        <ul class="flex column space-between">
+            <li>
+                <h4>om oss</h4>     
+            </li>
+            <li>
+                <h4>repertoar</h4> 
+            </li>
+            <li>
+                <h4>lyssna</h4>
+            </li>
+            <li>
+                <h4>framträdanden</h4>
+            </li>
+            <li>
+                <h4>blogg</h4>
+            </li>
+            <li>
+                <h4>lucia och jul</h4>
+            </li>
+            <li>
+                <h4>kontakt</h4>
+            </li>
+        </ul>
+    </div>
     <header class="flex vertical center">
         <div class="logo-top flex space-between">
             <i class="fas fa-bars fa-2x hidden-icon"></i>
             <h1>titania</h1>
-            <i class="fas fa-bars fa-2x menu-icon-mobile" onclick="openMenu()"></i>
+            <i class="fas fa-bars fa-2x menu-icon-mobile" id="hamburger-menu-icon"></i>
         </div>
         <div class="menu center flex space-around border-bottom">
             <i class="hidden-icon fab fa-instagram-square fa-2x"></i>
             <nav>
                 <ul class="flex space-between">
                     <li>
-                    <h4>om oss</h4>     
+                        <h4>om oss</h4>     
                     </li>
                     <li>
                         <h4>repertoar</h4> 
