changes for mobile menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="mobile-menu" id="mobile-menu">
-        <ul class="flex column space-between">
+        <ul class="flex column">
             <li>
                 <h4>om oss</h4>     
             </li>
