changed main function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fondamento&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a20cba948b.js" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="./slideshow.js"></script>
+    <script src="./main.js"></script>
 </head>
 <body>
     <div class="mobile-menu" id="mobile-menu">
@@ -42,7 +43,7 @@
         <div class="logo-top flex space-between">
             <i class="fas fa-bars fa-2x hidden-icon"></i>
             <h1>titania</h1>
-            <i class="fas fa-bars fa-2x menu-icon-mobile" id="hamburger-menu-icon"></i>
+            <i class="fas fa-bars fa-2x hamburger-menu-icon" id="hamburger-menu-icon"></i>
         </div>
         <div class="menu center flex space-around border-bottom">
             <i class="hidden-icon fab fa-instagram-square fa-2x"></i>
