added slideshow style

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 
     </aside>
     <main>
-
+        <div class="slideshow-container">
+            
+        </div>
     </main>
     <footer>
 
