changed sidebar menu

--- a/index.html
+++ b/index.html
@@ -34,15 +34,21 @@
     </div>
     <div class="grid-container">
         <header class="flex space-around">
+            <div class="hidden-icons">
+                <i class="fab fa-instagram-square fa-3x icon"></i>
+                <i class="fab fa-youtube-square fa-3x icon"></i>
+                <i class="fab fa-spotify fa-3x icon"></i>
+            </div>
             <h1>titania</h1>
+            <div class="media-icons">
+                <i class="fab fa-instagram-square fa-3x icon"></i>
+                <i class="fab fa-youtube-square fa-3x icon"></i>
+                <i class="fab fa-spotify fa-3x icon"></i>
+            </div>
         </header>
         <aside class="flex vertical center">
-            <div class="media-icons">
-                <i class="fab fa-instagram-square fa-3x"></i>
-                <i class="fab fa-youtube-square fa-3x"></i>
-                <i class="fab fa-spotify fa-3x"></i>
-            </div>
-            <ul class="sidebar-menu flex vertical align-center space-between">
+
+            <ul class="sidebar-menu flex vertical align-center">
                 <li>
                     <h4>hem</h4>     
                 </li>
@@ -74,8 +80,8 @@
                 <img src="./assets/titania10.jpg" alt="">
             </div>
         </main>
-        <footer>
-    
+        <footer class="flex center">
+            <p>© titania 2021</p>
         </footer>
     </div>
 </body>
