added content box

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Fondamento&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a20cba948b.js" crossorigin="anonymous"></script>
     <script src="./slideshow.js"></script>
+    <script src="./about.js"></script>
     <script src="./main.js"></script>
+
 </head>
 <body>
     <div class="mobile-menu" id="mobile-menu">
@@ -66,18 +68,24 @@
                 </li>
             </ul>
         </aside>
-        <main class="flex center">
-            <div class="slideshow-container">
-                <img src="./assets/titania1.jpg" alt="titania in lucia gowns" class="show">
-                <img src="./assets/titania2.jpg" alt="">
-                <img src="./assets/titania3.jpg" alt="">
-                <img src="./assets/titania4.jpg" alt="">
-                <img src="./assets/titania5.jpg" alt="">
-                <img src="./assets/titania6.jpg" alt="">
-                <img src="./assets/titania7.jpg" alt="">
-                <img src="./assets/titania8.jpg" alt="">
-                <img src="./assets/titania9.jpg" alt="">
-                <img src="./assets/titania10.jpg" alt="">
+        <main>
+            <div class="content">
+                <!-- code injected by javascript-->                
+            </div>
+
+            <div class="flex center">
+                <div class="slideshow-container">
+                    <img src="./assets/titania1.jpg" alt="titania in lucia gowns" class="show">
+                    <img src="./assets/titania2.jpg" alt="">
+                    <img src="./assets/titania3.jpg" alt="">
+                    <img src="./assets/titania4.jpg" alt="">
+                    <img src="./assets/titania5.jpg" alt="">
+                    <img src="./assets/titania6.jpg" alt="">
+                    <img src="./assets/titania7.jpg" alt="">
+                    <img src="./assets/titania8.jpg" alt="">
+                    <img src="./assets/titania9.jpg" alt="">
+                    <img src="./assets/titania10.jpg" alt="">
+                </div>
             </div>
         </main>
         <footer class="flex center">
